# api_council-of-sages

./: .codespellrc  .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  render.yaml  ruff.toml
.cursor/rules/: ai_tools_rules.mdc  general_cursor_rules.mdc  python_files_rules.mdc  tests_rules.mdc
council_of_sages/: __init__.py  app.py  config.py  exc.py  types.py
council_of_sages/lib/: database.py  prompting.py
council_of_sages/lib/auth/: __init__.py  context.py  dependencies.py  firebase_auth.py
council_of_sages/lib/billing/: amount_validation.py  billing_llm_proxy.py  calculator.py  costs.py  service.py  token_count.py  webhook_handlers.py
council_of_sages/models/: __init__.py  conversations.py  messages.py  payment.py  usage_event.py  user.py
council_of_sages/orchestrator/: graph_definition.py  llm_agent.py  moderator.py  sages_loader.py  states.py
council_of_sages/orchestrator/prompt_modules/: __init__.py  marcus_aurelius_prompt.py  nassim_taleb_prompt.py  naval_ravikant_prompt.py  predefined_sage_prompt.py  query_distribution_prompt.py  response_consolidation_prompt.py  role_sage_prompt.py  user_input_cleaner_prompt.py
council_of_sages/orchestrator/sages/: bias_referee.yaml  council_host_and_guide.yaml  economics_moats_strategist.yaml  evolutionary_timing_and_scarcity_strategist.yaml  generalist_sage.yaml  incentives_architect.yaml  influence_diplomat.yaml  inversion_strategist.yaml  krishna.yaml  marcus_aurelius.yaml  nassim_taleb.yaml  naval_ravikant.yaml  power_dynamics_strategist.yaml  probabilistic_decider.yaml  systems_thinker.yaml
council_of_sages/orchestrator/tools/: philosophical_sage.py
council_of_sages/resources/: orchestrator.py  payments.py  users.py  webhooks.py
docs/: 03_add_login.md  04_add_token_count.md  05_accept_payments.md  06_small_adjustments_to_conversation.md  07_dynamic_sages.md  08_create_more_sages.md  09_plan_for_more_sages.md  10_parallel_cleaner_node.md  lang_chain_graph.md  project_setup.md
docs/render/: render_deployment_flow.md
scripts/: convert_firebase_key.py
